List tasks in task service
